package com.training.ISP.bad;

interface PrinterScanner {
    void print(Document document);
    void scan(Document document);
}
